# nyddu

./: .gitignore  1_demo.py  2_load.py  3_asgi.py  3_meta.py  3_route.py  4_asgi.py  LICENSE  NOTES.md  README.md  demo.py  hooks.sh  load.py  pyproject.toml  query.py  route.py  route.sh  scrape.py
nyddu/: __init__.py  crawler.py  db.py  objects.py  page.py  routes.py  scraper.py
templates/: detail.html  index.html  pages.html
