[project]

name = "nyddu"
version = "0.1.0"
description = "spider-ish"

authors = [
    { name = "Paco Nathan", email = "paco@derwen.ai" }
]

license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "icecream (>=2.1.4,<3.0.0)",
    "pydantic (>=2.11.6,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "defusedxml (>=0.7.1,<0.8.0)",
    "w3lib (>=2.3.1,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)"
]


[build-system]

requires = [
    "poetry-core>=2.0.0,<3.0.0",
]

build-backend = "poetry.core.masonry.api"
