[project]

name = "nyddu"
version = "0.1.0"
description = "spider-ish"

license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"

authors = [
    { name = "Paco Nathan", email = "paco@derwen.ai" }
]

dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "icecream (>=2.1.4,<3.0.0)",
    "pydantic (>=2.11.6,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "defusedxml (>=0.7.1,<0.8.0)",
    "w3lib (>=2.3.1,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "polars (>=1.30.0,<2.0.0)"
]


[build-system]

requires = [
    "poetry-core>=2.0.0,<3.0.0",
]

build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]

pytest = "^8.4.0"
pylint = "^3.3.7"
mypy = "^1.16.0"
types-defusedxml = "^0.7.0.20250516"
types-requests = "^2.32.4.20250611"
pyinstrument = "^5.0.2"
